Fix all the gutters and spacing

--- a/client/_type.scss
+++ b/client/_type.scss
@@ -14,7 +14,7 @@
 	overflow: hidden;
 	border: solid oColorsGetPaletteColor('warm-3');
 	border-width: 0 0 1px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	h1 {
 		@include podHeading;
 		float: left;
